--- a/.github/workflows/pake-mac.yml
+++ b/.github/workflows/pake-mac.yml
@@ -15,72 +15,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - id: sitehub-cn
-            appName: "Sitehub"
-            urlSecret: SITEHUB_URL_CN
-            url: "https://site.mornscience.top/admin"
-            iconFile: "new/sitehub图标.png"
-          - id: sitehub-global
-            appName: "Sitehub"
-            urlSecret: SITEHUB_URL_GLOBAL
-            url: "https://www.mornhub.help/admin"
-            iconFile: "new/sitehub图标.png"
-
-          - id: personalink-cn
-            appName: "Personalink"
-            urlSecret: PERSONALINK_URL_CN
-            url: "https://personalink.mornscience.top/admin"
-            iconFile: "new/personlink图标.png"
-          - id: personalink-global
-            appName: "Personalink"
-            urlSecret: PERSONALINK_URL_GLOBAL
-            url: "https://www.mornhub.lat/admin"
-            iconFile: "new/personlink图标.png"
-
-          - id: mornspeaker-cn
-            appName: "Mornspeaker"
-            urlSecret: MORNSPEAKER_URL_CN
-            url: "https://mornspeaker.mornscience.top/admin"
-            iconFile: "new/mornspeaker图标.png"
-          - id: mornspeaker-global
-            appName: "Mornspeaker"
-            urlSecret: MORNSPEAKER_URL_GLOBAL
-            url: "https://www.mornscience.onl/admin"
-            iconFile: "new/mornspeaker图标.png"
-
-          - id: mornclient-cn
-            appName: "Mornclient"
-            urlSecret: MORNCLIENT_URL_CN
-            url: "https://mornclient.mornscience.top/admin"
-            iconFile: "new/mornclient图标.png"
-          - id: mornclient-global
-            appName: "Mornclient"
-            urlSecret: MORNCLIENT_URL_GLOBAL
-            url: "https://www.mornscience.biz/admin"
-            iconFile: "new/mornclient图标.png"
-
-          - id: morncoach-cn
-            appName: "Morncoach"
-            urlSecret: MORNCOACH_URL_CN
-            url: "http://morncoach.mornscience.top/admin"
-            iconFile: "new/morncoach图标.png"
-          - id: morncoach-global
-            appName: "Morncoach"
-            urlSecret: MORNCOACH_URL_GLOBAL
-            url: "https://mornhub.biz/admin"
-            iconFile: "new/morncoach图标.png"
-
-          - id: morntool-cn
-            appName: "Morntool"
-            urlSecret: MORNTool_URL_CN
-            url: "http://morntool.mornscience.top/admin"
-            iconFile: "new/morntool图标.png"
-          - id: morntool-global
-            appName: "Morntool"
-            urlSecret: MORNTool_URL_GLOBAL
-            url: "https://www.mornhub.lol/admin"
-            iconFile: "new/morntool图标.png"
-
           - id: mornfront-cn
             appName: "Mornfront"
             urlSecret: MORNFROnt_URL_CN
@@ -91,61 +25,6 @@ jobs:
             urlSecret: MORNFROnt_URL_GLOBAL
             url: "https://www.mornscience.dev/admin"
             iconFile: "new/mornfront图标.png"
-
-          - id: multigpt-cn
-            appName: "Multigpt"
-            urlSecret: MULTIGPT_URL_CN
-            url: "https://multigpt.mornscience.top/admin"
-            iconFile: "new/multigpt图标.png"
-          - id: multigpt-global
-            appName: "Multigpt"
-            urlSecret: MULTIGPT_URL_GLOBAL
-            url: "https://morn.work/admin"
-            iconFile: "new/multigpt图标.png"
-
-          - id: mornspeaker-cn
-            appName: "Mornspeaker"
-            urlSecret: MORNSPEAKER_URL_CN
-            url: "https://mornspeaker.mornscience.top/"
-            iconFile: "new/mornspeaker图标.png"
-          - id: mornspeaker-global
-            appName: "Mornspeaker"
-            urlSecret: MORNSPEAKER_URL_GLOBAL
-            url: "https://www.mornscience.onl/"
-            iconFile: "new/mornspeaker图标.png"
-
-          - id: mornclient-cn
-            appName: "Mornclient"
-            urlSecret: MORNCLIENT_URL_CN
-            url: "https://mornclient.mornscience.top/"
-            iconFile: "new/mornclient图标.png"
-          - id: mornclient-global
-            appName: "Mornclient"
-            urlSecret: MORNCLIENT_URL_GLOBAL
-            url: "https://www.mornscience.biz"
-            iconFile: "new/mornclient图标.png"
-
-          - id: morncoach-cn
-            appName: "Morncoach"
-            urlSecret: MORNCOACH_URL_CN
-            url: "http://morncoach.mornscience.top"
-            iconFile: "new/morncoach图标.png"
-          - id: morncoach-global
-            appName: "Morncoach"
-            urlSecret: MORNCOACH_URL_GLOBAL
-            url: "https://mornhub.biz"
-            iconFile: "new/morncoach图标.png"
-
-          - id: morntool-cn
-            appName: "Morntool"
-            urlSecret: MORNTool_URL_CN
-            url: "http://morntool.mornscience.top"
-            iconFile: "new/morntool图标.png"
-          - id: morntool-global
-            appName: "Morntool"
-            urlSecret: MORNTool_URL_GLOBAL
-            url: "https://www.mornhub.lol/"
-            iconFile: "new/morntool图标.png"
 
     steps:
       - name: Checkout
@@ -164,17 +43,13 @@ jobs:
 
       - name: Build with Pake
         env:
-          PAKE_URL_SECRET: ${{ secrets[matrix.urlSecret] }}
-          PAKE_URL_FALLBACK: ${{ matrix.url }}
+          PAKE_URL: ${{ matrix.url }}
           PAKE_NAME: ${{ matrix.appName }}
           PAKE_ICON: ${{ github.workspace }}/${{ matrix.iconFile }}
         run: |
-          url=$PAKE_URL_SECRET
+          url=$PAKE_URL
           if [ -z "$url" ]; then
-            url=$PAKE_URL_FALLBACK
-          fi
-          if [ -z "$url" ]; then
-            echo "Missing URL. Set secret '${{ matrix.urlSecret }}' or fill matrix.url for ${{ matrix.id }}"
+            echo "Missing URL for ${{ matrix.id }}"
             exit 1
           fi
 
